# adventofcode-2024

./: Cargo.toml  README.md  justfile
examples/day1/: main.rs
examples/day10/: main.rs
examples/day11/: main.rs
examples/day12/: main.rs
examples/day13/: main.rs
examples/day14/: main.rs
examples/day15/: main.rs
examples/day16/: main.rs
examples/day17/: main.rs
examples/day18/: main.rs
examples/day19/: main.rs
examples/day2/: main.rs
examples/day20/: main.rs
examples/day22/: main.rs
examples/day23/: main.rs
examples/day24/: main.rs
examples/day25/: main.rs
examples/day3/: main.rs
examples/day4/: main.rs
examples/day5/: main.rs
examples/day6/: main.rs
examples/day7/: main.rs
examples/day8/: main.rs
examples/day9/: main.rs
src/days/: day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day2.rs  day20.rs  day22.rs  day23.rs  day24.rs  day25.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  mod.rs
src/days/test_input/: day17_small.txt
src/util/: infra.rs  mod.rs  prelude.rs
templates/: example  library
