[package]
name = "adventofcode-2024"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "aoc"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.66"
bitvec = "1.0.1"
dotenvy = "0.15.6"
itertools = "0.10.5"
nom = "7.1.1"
nom-supreme = "0.8.0"
pico-args = "0.5.0"
rayon = "1.10.0"
regex = "1.7.0"
ureq = "2.5.0"
